--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- partial:index.partial.html -->
 <div id="topo">
   <div id="topo-titulo">
-    <h2>Tarefa 2 - CSS</h2>
+    <h2>Tarefa 4 - DOM</h2>
     <h1>Enzo F. Spinella</h1>
   </div>
   <div id="topo-conteudo">
